k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simpletimeservice
  labels:
    app.kubernetes.io/name: simpletimeservice
    app.kubernetes.io/part-of: particle41-devops-challenge
